# MSkin

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp  main.qml  qml.qrc
PluginTool/Launcher/: CMakeLists.txt  MANIFEST.MF  qml.qrc
PluginTool/Launcher/Include/: LauncherActivator.h  LauncherImpl.h  LauncherService.h
PluginTool/Launcher/Source/: LauncherActivator.cpp  LauncherImpl.cpp
Test/: index.html  main.cpp  main.qml  qml.qrc  untitled.pro
UI/: MagicButton.qml  MagicEdit.qml  MoveView.qml
UI/Effects/: Diffusion.qml
